@@ -1588,13 +1588,14 @@ class ToolsProperty2Page : GlobalPropertyPage
 	this(GlobalOptions options)
 	{
 		super(options);
-		kNeededLines = 11;
+		kNeededLines = 12;
 	}
 
 	override void CreateControls()
 	{
-		AddControl("", mTimeBuilds    = new CheckBox(mCanvas, "Show build time"));
 		AddControl("", mSortProjects  = new CheckBox(mCanvas, "Sort project items"));
+		AddControl("", mShowUptodate  = new CheckBox(mCanvas, "Show why a target is rebuilt"));
+		AddControl("", mTimeBuilds    = new CheckBox(mCanvas, "Show build time"));
 		AddControl("", mStopSlnBuild  = new CheckBox(mCanvas, "Stop solution build on error"));
 		AddControl("", mDemangleError = new CheckBox(mCanvas, "Demangle names in link errors"));
 		AddControl("", mOptlinkDeps   = new CheckBox(mCanvas, "Monitor OPTLINK dependencies"));
@@ -1609,6 +1610,7 @@ class ToolsProperty2Page : GlobalPropertyPage
 	{
 		mTimeBuilds.setChecked(opts.timeBuilds);
 		mSortProjects.setChecked(opts.sortProjects);
+		mShowUptodate.setChecked(opts.showUptodateFailure);
 		mStopSlnBuild.setChecked(opts.stopSolutionBuild);
 		mDemangleError.setChecked(opts.demangleError);
 		mOptlinkDeps.setChecked(opts.optlinkDeps);
@@ -1623,6 +1625,7 @@ class ToolsProperty2Page : GlobalPropertyPage
 		int changes = 0;
 		changes += changeOption(mTimeBuilds.isChecked(), opts.timeBuilds, refopts.timeBuilds); 
 		changes += changeOption(mSortProjects.isChecked(), opts.sortProjects, refopts.sortProjects); 
+		changes += changeOption(mShowUptodate.isChecked(), opts.showUptodateFailure, refopts.showUptodateFailure); 
 		changes += changeOption(mStopSlnBuild.isChecked(), opts.stopSolutionBuild, refopts.stopSolutionBuild); 
 		changes += changeOption(mDemangleError.isChecked(), opts.demangleError, refopts.demangleError); 
 		changes += changeOption(mOptlinkDeps.isChecked(), opts.optlinkDeps, refopts.optlinkDeps); 
@@ -1635,6 +1638,7 @@ class ToolsProperty2Page : GlobalPropertyPage
 
 	CheckBox mTimeBuilds;
 	CheckBox mSortProjects;
+	CheckBox mShowUptodate;
 	CheckBox mStopSlnBuild;
 	CheckBox mDemangleError;
 	CheckBox mOptlinkDeps;
