@@ -14,7 +14,8 @@ EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{2BD51E62-6604-48AE-9E01-C940C0CA1C68}"
 	ProjectSection(SolutionItems) = preProject
 		CHANGES = CHANGES
-		README = README
+		Makefile = Makefile
+		README.md = README.md
 		TODO = TODO
 		VERSION = VERSION
 		nsis\visuald.nsi = nsis\visuald.nsi
