@@ -571,3 +571,6 @@ unreleased Version 0.3.37
   * fixed building with -op and source files on different drive than project
   * added file options per configuration
   * fixed invoking bad command when no files to compile, but additional arguments set
+  * added support for VS 2013 to installer, removed VS.NET 2003
+  * added global option to display the reason for building a target
+  * fixed custom build rules executed twice sometimes
